# SPbU_edu

./: .gitignore
.github/workflows/: testDeque.yml  testDynamicArray.yml  testTreap.yml
Semester 1/2022_09_07_Introduction/CW_1/: Demo.c
Semester 1/2022_09_07_Introduction/HW_1/: main.c
Semester 1/2022_09_07_Introduction/HW_2/: main.c
Semester 1/2022_09_07_Introduction/HW_3/: main.c
Semester 1/2022_09_07_Introduction/HW_4/: main.c
Semester_1/2022_09_07_Introduction/CW_1/: CMakeLists.txt
Semester_1/2022_09_07_Introduction/HW_1/: main.c
Semester_1/2022_09_07_Introduction/HW_2/: main.c
Semester_1/2022_10_12_Stack/HW_1/: CMakeLists.txt  calculate.c  calculate.h  main.c  test.c
Semester_1/2022_10_12_Stack/HW_2/: CMakeLists.txt  bracketSequence.c  bracketSequence.h  main.c  test.c
Semester_1/2022_12_07_KR_2_2/: CMakeLists.txt  DynamicArray.c  DynamicArray.h  Set.c  Set.h  test.c
Semester_1/2022_12_21_TEST_3/: CMakeLists.txt  checkString.c  checkString.h  main.c  test.c
Semester_1/Comission/: CMakeLists.txt  GameOfLife.c  GameOfLife.h  main.c  test.c
structs/: Test.bat
structs/Deque/: Deque.c  Deque.h  test.c
structs/DynamicArray/: CMakeLists.txt  DynamicArray.c  DynamicArray.h  DynamicArrayPredefines.h  test.c
structs/HashTable/: CMakeLists.txt  DynamicArray.h  DynamicArrayStrInt.c  DynamicArrayStrInt.h  HashTable.c  HashTable.h  HashTableTypes.c  HashTableTypes.h
structs/HashTableV2/: CMakeLists.txt  HashTable.c  HashTable.h  main.c  test.c
structs/Stack/: Stack.c  Stack.h  test.c
structs/Treap/: CMakeLists.txt  Treap.c  Treap.h  test.c
(+77 files in other folders)
